Move GitHub watchlist search to SWA API
